[package]
name = "redis-pool"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.82"
chrono = { version = "0.4.37", features = ["serde"] }
deadpool = "0.12"
deadpool-redis = { version = "0.15", features = ["cluster"] }
dotenv = "0.15"
redis = { version = "0.25.3", features = ["tokio-native-tls-comp", "cluster-async"] }
tokio = { version = "1.37.0", features = ["full"] }
tracing = { version = "0.1.40" }
tracing-subscriber = "0.3.18" 
url = "2.2.2"