[package]
name = "redis-pool"
version = "0.1.0"
edition = "2021"

# [dependencies.redis]
# version = "0.27.5"
# features = ["tokio-native-tls-comp", "aio", "tls-rustls"]
# features = ["aio", "tls-rustls"]

[dependencies]
anyhow = "1.0.82"
# async-native-tls = "0.5"
chrono = { version = "0.4.37", features = ["serde"] }
deadpool = "0.12"
deadpool-redis = { version = "0.20" }
dotenv = "0.15"
# redis = { version = "0.25", features = ["tokio-native-tls-comp", "cluster-async", "aio", "tls-rustls"] }
# redis = { version = "0.25", features = ["tokio-native-tls-comp", "cluster-async"] }
# redis = { version = "0.27", features = ["tokio-native-tls-comp", "cluster-async", "tls-rustls"] }
# redis = { version = "0.23", features = ["tls-rustls", "aio"] }

# redis = { version = "0.27", features = ["tokio-native-tls-comp", "aio"] }

# redis = { version = "0.27.5", features = ["tokio-native-tls-comp", "aio", "tls-rustls"] }
# redis = { version = "0.27.5", features = ["aio", "tls-rustls"] }
# redis = { version = "0.27.5", features = ["aio"] }
# redis = { version = "0.27.5", features = ["aio", "async-native-tls", "tokio-rustls-comp", "futures-rustls", "rustls"] }
# redis = { version = "0.27.5", features = ["tokio-native-tls", "async-native-tls", "aio", "futures-rustls", "rustls", "tls"] }
redis = { version = "0.29.5", features = [
    "aio", 
    "tokio-native-tls-comp", 
    "tls", 
    "async-std-tls-comp"] }
# rustls = { version = "0.23", features = ["ring"] }
tokio = { version = "1.37.0", features = ["full"] }
tokio-rustls = "0.26"
futures-rustls = "0.26"
tracing = { version = "0.1.40" }
tracing-subscriber = "0.3.18" 
url = "2.2.2"

